# solarc-theme

./: .gitignore  PKGBUILD  README.md  arc-theme-upgrade  configure.ac  gtk2_dark_colour.patch  gtk2_png_assets.patch  package-lock.json  package.json  solarc-theme-upgrade  solarize.sh
common/: Makefile.am  index.theme  index.theme-dark  index.theme-darker
common/cinnamon/: cinnamon-dark.css  cinnamon.css
common/gtk-2.0/: apps.rc  gtkrc  gtkrc-dark  gtkrc-darker  panel.rc  xfce-notify.rc
common/metacity-1/: metacity-theme-1-dark.xml  metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
common/xfwm4/: close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-prelight.xpm  hide-pressed.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  (+24 more)
common/xfwm4-dark/: close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-prelight.xpm  hide-pressed.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  maximize-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-pressed.xpm  shade-active.xpm  shade-inactive.xpm  shade-pressed.xpm  stick-active.xpm  stick-inactive.xpm  stick-pressed.xpm  title-1-active.xpm  title-1-inactive.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-4-inactive.xpm  title-5-active.xpm  title-5-inactive.xpm  top-left-active.xpm  top-left-inactive.xpm  top-right-active.xpm  top-right-inactive.xpm
extra/: Makefile.am
(+42 files in other folders)
